# TTA_Primer-Design

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: pipeline_config.yaml  primer3_pcr_params.yaml  primer3_probe_params.yaml  primer3_qpcr_params.yaml
src/tta_primer_design/: __init__.py  cli.py  config.py  logging_setup.py  main.py  models.py
src/tta_primer_design/modules/: __init__.py  blast_specificity.py  blast_visualizer.py  filter_ranker.py  input_parser.py  ncbi_primer_blast.py  primer3_runner.py  primer_evaluator.py  probe_designer.py  report_generator.py  sequence_fetcher.py  sequence_preprocessor.py  snp_checker.py  thermodynamics.py
src/tta_primer_design/utils/: __init__.py  ncbi_api.py  rate_limiter.py  validators.py
tests/: __init__.py  test_blast_specificity.py  test_blast_visualizer.py  test_cli.py  test_config.py  test_filter_ranker.py  test_input_parser.py  test_integration.py  test_models.py  test_ncbi_primer_blast.py  test_primer3_runner.py  test_primer_evaluator.py  test_probe_designer.py  test_report_generator.py  test_sequence_fetcher.py  test_sequence_preprocessor.py  test_snp_checker.py  test_thermodynamics.py  test_utils_rate_limiter.py  test_utils_validators.py
tests/fixtures/: sample_fasta.fa  sample_input.json  sample_targets.csv  test_config.yaml
