[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tta-primer-design"
version = "0.1.0"
description = "Pipeline thiết kế primer/probe: Primer3 local + BLAST specificity + NCBI Primer-BLAST"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Anh-Genetics" }]
keywords = ["primer", "probe", "bioinformatics", "primer3", "blast"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "biopython>=1.81",
    "click>=8.1",
    "pyyaml>=6.0",
    "requests>=2.31",
    "pandas>=2.0",
    "numpy>=1.24",
    "openpyxl>=3.1",
    "jinja2>=3.1",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "primer3-py>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "black>=24.0",
    "mypy>=1.5",
    "types-PyYAML",
    "types-requests",
]

[project.scripts]
tta-primer-design = "tta_primer_design.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
